Exposed the mode option in ELC.
Added a few methods to PBP

--- a/qfactoring.ipynb
+++ b/qfactoring.ipynb
@@ -27,23 +27,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p                                                                                                    1    x2    x1     1\n",
-      "q                                                                                                    1    x4    x3     1\n",
-      "                                                                                                     1    x2    x1     1\n",
-      "                                                                                              x3  x2x3  x1x3    x3      \n",
-      "                                                                                        x4  x2x4  x1x4    x4            \n",
-      "                                                                                   1    x2    x1     1                  \n",
-      "                                                                                                          x5  -2x5      \n",
-      "                                                                                                    x6  -2x6            \n",
-      "                                                                                              x7        -4x7            \n",
-      "                                                                                              x8  -2x8                  \n",
-      "                                                                                        x9        -4x9                  \n",
-      "                                                                                       x10 -2x10                        \n",
-      "                                                                                 x11       -4x11                        \n",
-      "                                                                                 x12 -2x12                              \n",
-      "                                                                           x13       -4x13                              \n",
-      "                                                                           x14 -2x14                                    \n",
-      "                                                                            -1     0     0     0    -1    -1    -1    -1\n",
+      "p                                                                                                          1    x2    x1     1\n",
+      "q                                                                                                          1    x4    x3     1\n",
+      "                                                                                                           1    x2    x1     1\n",
+      "                                                                                                    x3  x2x3  x1x3    x3      \n",
+      "                                                                                              x4  x2x4  x1x4    x4            \n",
+      "                                                                                         1    x2    x1     1                  \n",
+      "                                                                                                                x5  -2x5      \n",
+      "                                                                                                          x6  -2x6            \n",
+      "                                                                                                    x7        -4x7            \n",
+      "                                                                                                    x8  -2x8                  \n",
+      "                                                                                              x9        -4x9                  \n",
+      "                                                                                             x10 -2x10                        \n",
+      "                                                                                       x11       -4x11                        \n",
+      "                                                                                       x12 -2x12                              \n",
+      "                                                                                 x13       -4x13                              \n",
+      "                                                                                 x14 -2x14                                    \n",
+      "                                                                                  -1     0     0     0    -1    -1    -1    -1\n",
       "-1+x1+x3+-2x5\n",
       "-1+x2+x4+x5+-2x6+-4x7+x1x3\n",
       "1+x6+-2x8+-4x9+x2x3+x1x4\n",
@@ -62,20 +62,30 @@
     "            line += str(lst[i]).rjust(cpad)\n",
     "        else:\n",
     "            line += ''.rjust(cpad)\n",
-    "    line = header.ljust(cpad) + line.rjust(rpad-cpad)\n",
+    "    line = header.ljust(cpad) + line.rjust(rpad)\n",
     "    print(line)\n",
     "\n",
-    "modulus = 143 #60491\n",
+    "modulus = 143\n",
+    "#modulus = 899\n",
+    "#modulus = 3599\n",
+    "#modulus =  4757\n",
+    "#modulus = 14351\n",
+    "#modulus = 376289\n",
+    "\n",
     "N = list()\n",
     "while modulus > 0:\n",
     "    N.append(PBP(0,-(modulus%2)))\n",
     "    modulus >>= 1\n",
-    "\n",
+    "if len(N)%2: N.append(PBP(0,0))\n",
+    "    \n",
     "n = len(N)//2 - 2\n",
     "p = [PBP()] + [PBP(x) for x in range(1,n+1)] + [PBP()]\n",
     "q = [PBP()] + [PBP(x) for x in range(n+1,2*n+1)] + [PBP()]\n",
     "print_list(p, 'p')\n",
     "print_list(q, 'q')\n",
+    "\n",
+    "bit_diff = n\n",
+    "carry_start = 2*n+1\n",
     "\n",
     "next_var = 2*n+1\n",
     "\n",
@@ -118,32 +128,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved for and eliminated x13\n",
-      "-1+x1+x3+-2x5\n",
-      "-1+x2+x4+x5+-2x6+-4x7+x1x3\n",
-      "1+x6+-2x8+-4x9+x2x3+x1x4\n",
-      "x1+x3+x7+x8+-2x10+-4x11+x2x4\n",
-      "-4+x2+x4+x9+x10+-2x12+4x14\n",
-      "1+x11+x12+-2x14\n"
+      "Max variables:  0\n",
+      "Max qubits:  0\n",
+      "14 variables remaining\n",
+      "32 qubits remaining\n"
      ]
     }
    ],
    "source": [
+    "def test_substitution(eqn, var, value):\n",
+    "    f = eqn.substitute(var, value)\n",
+    "    H = f*f\n",
+    "    if H.degree() > 2: H = H.toQuadratic()\n",
+    "    if H.varcount() > 21:\n",
+    "        print(\"%d is too many variables\" % H.varcount())\n",
+    "        return (True, -1, -1)\n",
+    "    bqm = H.toBQM()\n",
+    "    response = dimod.ExactSolver().sample(bqm)\n",
+    "    return (min(response.data_vectors['energy']) == 0, f.varcount(), H.varcount())\n",
+    "\n",
+    "solutions = dict()\n",
+    "degenerate = True\n",
+    "\n",
+    "max_vars = 0\n",
+    "max_qubits = 0\n",
+    "\n",
     "eqns = list(equations)\n",
-    "while(True):\n",
+    "while(False):\n",
     "    made_change = False\n",
     "    #check for solvable variable\n",
     "    for eqn in eqns:\n",
-    "        if eqn.degree() == 1 and eqn.varcount() == 2:\n",
+    "        if eqn.degree() == 1 and eqn.varcount() <= 2:\n",
     "            var = eqn.variables()[0]\n",
     "            sub = eqn.solvefor(var)\n",
+    "            \n",
+    "            if sub.varcount() == 1:\n",
+    "                same = sub.const() == 0 and sub.coeff(sub.variables()[0]) == 1\n",
+    "                different = sub.const() == 1 and sub.coeff(sub.variables()[0]) == -1\n",
+    "                if not same and not different: continue\n",
+    "            #if sub.const()<0: continue\n",
+    "            #if sub.const() == 1 and sub.varcount() == 1 and sub.coeff(sub.variables()[0]) != -1: continue\n",
+    "                \n",
+    "            if degenerate and var < carry_start and sub.varcount() == 1:\n",
+    "                var2 = sub.variables()[0]\n",
+    "                if var2 < carry_start and abs(var2-var) == bit_diff and sub.const() == 1:\n",
+    "                    degenerate = False\n",
+    "                    sub = PBP(0,1)\n",
+    "                    solutions[var2] = PBP(0,0)\n",
+    "                    reduced = list()\n",
+    "                    for eqn in eqns:\n",
+    "                        eqn = eqn.substitute(var2, PBP(0,0))\n",
+    "                        if not eqn.iszero(): reduced.append(eqn)\n",
+    "                    eqns = reduced\n",
+    "                    print(\"Broke degeneracy with x%d and x%d\" % (var, var2))\n",
+    "                    \n",
+    "            solutions[var] = sub\n",
     "            \n",
     "            reduced = list()\n",
     "            for eqn in eqns:\n",
@@ -154,119 +202,70 @@
     "            made_change = True\n",
     "            print('Solved for and eliminated x%d' % var)\n",
     "            for eqn in eqns: print(eqn)\n",
+    "            print(\"\")\n",
     "            break\n",
+    "            \n",
+    "    if made_change: continue\n",
     "    \n",
-    "    \n",
+    "    #check for variables that are determined by single equation\n",
+    "    sorted_eqns = sorted(eqns, key=lambda x:(x.varcount(), x.degree()))\n",
+    "    for eqn in sorted_eqns:\n",
+    "        for var in eqn.variables():\n",
+    "            solution = None\n",
+    "            \n",
+    "            solved, vcount, qcount = test_substitution(eqn, var, PBP(0,0))\n",
+    "            max_vars = max(max_vars, vcount)\n",
+    "            max_qubits = max(max_qubits, qcount)\n",
+    "            if not solved: solution = PBP()\n",
+    "            \n",
+    "            solved, vcount, qcount = test_substitution(eqn, var, PBP())\n",
+    "            max_vars = max(max_vars, vcount)\n",
+    "            max_qubits = max(max_qubits, qcount)\n",
+    "            if not solved: solution = PBP(0,0)\n",
+    "                \n",
+    "            if solution is not None:\n",
+    "                solutions[var] = solution\n",
+    "                reduced = list()\n",
+    "                for x in eqns:\n",
+    "                    x = x.substitute(var, solution)\n",
+    "                    if not x.iszero(): reduced.append(x)\n",
+    "                eqns = reduced\n",
+    "                made_change = True\n",
+    "                print(\"Solved x%d=\" % var, solution, \"in \", eqn)\n",
+    "                for x in eqns: print(x)\n",
+    "                print(\"\")\n",
+    "                break\n",
+    "                \n",
+    "        if made_change: break\n",
+    "                \n",
     "    if not made_change: break\n",
-    "        \n",
-    "H = PBP(0,0)\n",
-    "for eqn in eqns: H += eqn*eqn\n",
-    "H = H.toQuadratic()\n",
-    "bqm = H.toBQM()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1+x1+x3+-2x5\n",
-      "-1+x2+x4+x5+-2x6+-4x7+x1x3\n",
-      "1+x6+-2x8+-4x9+x2x3+x1x4\n",
-      "0+x1+x3+x7+x8+-2x10+-4x11+x2x4\n",
-      "0+x2+x4+x9+x10+-2x12+-4x13\n",
-      "1+x11+x12+-2x14\n",
-      "-1+x13+x14\n",
-      "\n",
-      "eliminate x5\n",
-      "-1+x1+x3\n",
-      "-1+x2+x4+-2x6+-4x7+x1x3\n",
-      "1+x6+-2x8+-4x9+x2x3+x1x4\n",
-      "x1+x3+x7+x8+-2x10+-4x11+x2x4\n",
-      "x2+x4+x9+x10+-2x12+-4x13\n",
-      "1+x11+x12+-2x14\n",
-      "-1+x13+x14\n",
-      "\n",
-      "eliminate x1\n",
-      "-1+x2+x4+-2x6+-4x7\n",
-      "1+x4+x6+-2x8+-4x9+x2x3+-1x3x4\n",
-      "1+x7+x8+-2x10+-4x11+x2x4\n",
-      "x2+x4+x9+x10+-2x12+-4x13\n",
-      "1+x11+x12+-2x14\n",
-      "-1+x13+x14\n",
-      "\n",
-      "eliminate x14\n",
-      "-1+x2+x4+-2x6+-4x7\n",
-      "1+x4+x6+-2x8+-4x9+x2x3+-1x3x4\n",
-      "1+x7+x8+-2x10+-4x11+x2x4\n",
-      "x2+x4+x9+x10+-2x12+-4x13\n",
-      "-1+x11+x12+2x13\n",
-      "\n",
-      "eliminate x6\n",
-      "-1+x2+x4+-4x7\n",
-      "1+x4+-2x8+-4x9+x2x3+-1x3x4\n",
-      "1+x7+x8+-2x10+-4x11+x2x4\n",
-      "x2+x4+x9+x10+-2x12+-4x13\n",
-      "-1+x11+x12+2x13\n",
-      "\n",
-      "eliminate x7\n",
-      "-1+x2+x4\n",
-      "1+x4+-2x8+-4x9+x2x3+-1x3x4\n",
-      "1+x8+-2x10+-4x11+x2x4\n",
-      "x2+x4+x9+x10+-2x12+-4x13\n",
-      "-1+x11+x12+2x13\n",
-      "\n",
-      "eliminate x2\n",
-      "1+x3+x4+-2x8+-4x9+-2x3x4\n",
-      "1+x8+-2x10+-4x11\n",
-      "1+x9+x10+-2x12+-4x13\n",
-      "-1+x11+x12+2x13\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\neliminate x5\")\n",
-    "eqs2 = list()\n",
-    "for eqn in eqs: eqs2.append(eqn.substitute(5, PBP(0,0)))\n",
-    "for eqn in eqs2: print(eqn)\n",
-    "    \n",
-    "print(\"\\neliminate x1\")\n",
-    "eqs3 = list()\n",
-    "for i in range(1,len(eqs2)): eqs3.append(eqs2[i].substitute(1, PBP(0,1)+PBP(3,-1)))\n",
-    "for eqn in eqs3: print(eqn)\n",
-    "    \n",
-    "print(\"\\neliminate x14\")\n",
-    "eqs4 = list()\n",
-    "for i in range(0,len(eqs3)-1): eqs4.append(eqs3[i].substitute(14, PBP(0,1)+PBP(13,-1)))\n",
-    "for eqn in eqs4: print(eqn)\n",
-    "    \n",
-    "print(\"\\neliminate x6\")\n",
-    "eqs5 = list()\n",
-    "for eqn in eqs4: eqs5.append(eqn.substitute(6, PBP(0,0)))\n",
-    "for eqn in eqs5: print(eqn)\n",
     "\n",
-    "print(\"\\neliminate x7\")\n",
-    "eqs6 = list()\n",
-    "for eqn in eqs5: eqs6.append(eqn.substitute(7, PBP(0,0)))\n",
-    "for eqn in eqs6: print(eqn)\n",
+    "        \n",
+    "for var, solution in solutions.items():\n",
+    "    if solution.varcount() == 1:\n",
+    "        unknown = solution.variables()[0]\n",
+    "        if unknown in solutions and solutions[unknown].varcount()==0:\n",
+    "            solutions[var] = solution.substitute(unknown, solutions[unknown])\n",
     "    \n",
-    "print(\"\\neliminate x2\")\n",
-    "eqs7 = list()\n",
-    "for i in range(1,len(eqs6)): eqs7.append(eqs6[i].substitute(2, PBP(0,1)+PBP(4,-1)))\n",
-    "for eqn in eqs7: print(eqn)\n",
-    "    \n",
-    "H = PBP(0,0)\n",
-    "for eqn in eqs7: H += eqn*eqn\n",
-    "#print(H)\n",
-    "H = H.toQuadratic()\n",
-    "bqm = H.toBQM()\n",
-    "#print(bqm)"
+    "for key in sorted(solutions.keys()):\n",
+    "    print(key, \"=\", solutions[key])\n",
+    "\n",
+    "print(\"Max variables: \", max_vars)\n",
+    "print(\"Max qubits: \", max_qubits)\n",
+    "\n",
+    "if set(range(1, carry_start)).issubset(set(solutions.keys())):\n",
+    "    p=1+2**(bit_diff+1)\n",
+    "    for x in range(1,bit_diff+1): p+=solutions[x].const()*2**x\n",
+    "    q=1+2**(bit_diff+1)\n",
+    "    for x in range(1,bit_diff+1): q+=solutions[x+bit_diff].const()*2**x\n",
+    "    print(\"Solved!  %d * %d = %d\" % (p,q, p*q))\n",
+    "else:\n",
+    "    H = PBP(0,0)\n",
+    "    for eqn in eqns: H += eqn*eqn\n",
+    "    print(\"%d variables remaining\" % H.varcount())\n",
+    "    H = H.toQuadratic(mode=0)\n",
+    "    print(\"%d qubits remaining\" % H.varcount())\n",
+    "    bqm = H.toBQM()\n"
    ]
   },
   {
@@ -2325,6 +2324,24 @@
     "print(x1+x2, \"should be x1+x2\")\n",
     "print((x1+x2)*(x1+x2), \"should be x1+x2+2x1x2\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
